syntax = "proto3";

option go_package = "./pb";

package pb;

message FileUploadReq {
  int64 userId = 1;
  string filename = 2;
  string ext = 3;
  int64 size = 4;
  bytes fileData = 5;
}
message FileUploadResp {
  string url = 1;
}

service upload {
  rpc upload(FileUploadReq) returns(FileUploadResp);
}